# sda

./: pyproject.toml
experiments/ibpm/: figures.ipynb  train.py  utils.py
experiments/kolmogorov/: figures.ipynb  figures_bis.ipynb  generate.py  sandwich.ipynb  train.py  utils.py
experiments/lorenz/: eval.py  generate.py  train.py  utils.py
sda/: mcs.py  nn.py  score.py  utils.py
